<resources>
    <string name="app_name">CustomerManagment</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview3">TextView</string>
    <string name="welcome_to_profile">Welcome To Profile</string>
    <string name="textview2">TextView</string>
    <string name="back">back</string>
    <string name="edit">edit</string>
    <string name="edit_user_profile">edit user profile</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="reset_password">reset password</string>
    <string name="save">save</string>
    <string name="edit_customer_profile">Edit Customer Profile</string>
    <string name="todo4">TODO</string>
    <string name="delete_user_account">delete user account</string>
    <string name="todo0">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo7">TODO</string>
    <string name="welcome_back">welcome back</string>
    <string name="todo5">todo</string>
    <string name="login_to_your_existent_account">login to your existent account</string>
    <string name="username">username</string>
    <string name="password1">password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="forgotten_password">forgotten_password</string>
    <string name="forgotten_password1">forgotten password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="let_s_get_started">let\'s get started</string>
    <string name="todo6">todo</string>
    <string name="todo9">todo</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="username1">Username</string>
    <string name="password">password</string>
    <string name="create">create</string>
    <string name="sign_in">sign in</string>
    <string name="save1">SAVE</string>
    <string name="back1">Back</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="reset_password1">Reset Password</string>
</resources>